--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch public/data/productos.json --port process.env.PORT || 3000"
+    "server": "json-server --watch public/data/productos.json",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
