--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "e-commerce project for the Oracle Next Education program",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "json-server --watch public/data/productos.json",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
